--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Nathan Daly <nhdaly@gmail.com>"]
 version = "1.1.0"
 
 [deps]
+ApplicationBuilderAppUtils = "96374992-6a10-11e9-2fa0-73472aac04df"
 SimpleDirectMediaLayer = "98e33af6-2ee5-5afd-9e75-cbc738b767c4"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
