--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Nathan Daly <nhdaly@gmail.com>"]
 version = "1.1.0"
 
 [deps]
+ApplicationBuilder = "f9309374-59cc-5ff5-a120-e3e470a57b4a"
 ApplicationBuilderAppUtils = "96374992-6a10-11e9-2fa0-73472aac04df"
+PackageCompiler = "9b87118b-4619-50d2-8e1e-99f35a4d4d9d"
 SimpleDirectMediaLayer = "98e33af6-2ee5-5afd-9e75-cbc738b767c4"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
